// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue it has the correct pristine / empty state 1`] = `
<div
  class="options"
>
  <div
    class="container"
  >
    <div
      class="header"
    >
      
      Puppeteer Recorder Options
      
      <small
        class="saving-badge text-muted"
        style="display: none;"
      >
        
        Saving...
      
      </small>
    </div>
     
    <!---->
     
    <div
      class="footer"
    >
      
      sponsored by
      
      <a
        href="https://checklyhq.com"
        target="_blank"
      >
        <img
          alt=""
          src="/images/text_racoon_logo.svg"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`App.vue it stores and loads the user's edited options 1`] = `
<div
  class="options"
>
  <div
    class="container"
  >
    <div
      class="header"
    >
      
      Puppeteer Recorder Options
      
      <small
        class="saving-badge text-muted"
        style="display: none;"
      >
        
        Saving...
      
      </small>
    </div>
     
    <div
      class="content"
    >
      <div
        class="settings-block"
      >
        <h4
          class="settings-block-title"
        >
          
          Code Generator settings
        
        </h4>
         
        <div
          class="settings-block-main"
        >
          <label>
            <input
              id="options-code-wrapAsync"
              type="checkbox"
            />
            
            wrap code in async function
          
          </label>
        </div>
      </div>
    </div>
     
    <div
      class="footer"
    >
      
      sponsored by
      
      <a
        href="https://checklyhq.com"
        target="_blank"
      >
        <img
          alt=""
          src="/images/text_racoon_logo.svg"
        />
      </a>
    </div>
  </div>
</div>
`;
